@@ -224,7 +224,7 @@ CfgVars["earthquakes"] = 1 -- Should earthquakes be enabled?
 CfgVars["dmautokick"] = 1 -- Enable deathmatch auto-kick
 CfgVars["doorwarrants"] = 1 -- Whether or not CPs require a warrant to smash in a door
 CfgVars["allowvnocollide"] = 0 -- Whether or not to allow players to no-collide their vehicles (security)
-CfgVars["restrictbuypistol"] = 0 -- Whether /buypistol is available only to Gun Dealers (if one or more)
+CfgVars["restrictbuypistol"] = 0 -- Whether /buy is available only to Gun Dealers (if one or more)
 CfgVars["noguns"] = 0 -- Whether or not guns are banned on this server
 CfgVars["customjobs"] = 1 -- Whether or not players can use the /job command
 CfgVars["deathblack"] = 1 -- Whether or not players see black when dead
@@ -232,7 +232,7 @@ CfgVars["norespawn"] = 1 -- Whether people have to respawn when they change job 
 CfgVars["advertisements"] = 1--chatprint advertisements
 CfgVars["copscanunfreeze"] = 1  -- Cops can unfreeze props with the battering ram
 CfgVars["removeclassitems"] = 1 -- Remove(example) every gun shipment when the gundealer changes to a medic or something
-CfgVars["enablebuypistol"] = 1 -- People can do /buypistol
+CfgVars["enablebuypistol"] = 1 -- People can do /buy
 CfgVars["allowpdchief"] = 1 --Allow the chief
 CfgVars["enableshipments"] = 1 --Enable gun shipments
 CfgVars["lottery"] = 1 -- Enable the lottery
